--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "yaml2json": "yaml2json api/swagger/swagger.yaml > api/swagger/swagger.json"
   },
   "dependencies": {
-    "bcrypt-as-promised": "^1.1.0",
+    "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "^0.0.3",
+    "bcrypt-promise": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "celebrate": "^7.0.4",
@@ -52,11 +53,14 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-chai-friendly": "^0.2.0",
     "eslint-plugin-import": "^2.1.0",
+    "mocha": "^3.1.2",
     "nodemon": "^1.17.1"
   },
   "engines": {
